--- a/thule-gateway-service/k8s/cit.yml
+++ b/thule-gateway-service/k8s/cit.yml
@@ -50,8 +50,11 @@ spec:
               value: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
             - name: SPRING_PROFILES_ACTIVE
               value: cit
-            - name: THULE_SHARED_OAUTH2_RESOURCESERVER_JWS_ENABLED
-              value: "false"
+            - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KEYCLOAK_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: thule-keycloak-secrets
+                  key: thule-gateway-service-client-secret
             - name: TZ
               value: Europe/London
             - name: ROLLOUT_TIME
