--- a/thule-gateway-service/src/main/resources/config/application-ctest.yml
+++ b/thule-gateway-service/src/main/resources/config/application-ctest.yml
@@ -4,6 +4,12 @@ spring:
     kubernetes:
       discovery:
         enabled: false
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:${wiremock.server.port}/auth/realms/thule-test
   zipkin:
     enabled: false
 
