--- a/thule-gateway-service/build.gradle
+++ b/thule-gateway-service/build.gradle
@@ -51,13 +51,16 @@ dependencies {
     implementation("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
 
     testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
+    testImplementation("org.springframework.cloud:spring-cloud-contract-wiremock")
 
     itestImplementation("org.springframework.boot:spring-boot-starter-webflux")
 
     ctestImplementation("org.springframework.boot:spring-boot-starter-webflux")
 
     dtestImplementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    dtestImplementation platform("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR3")
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
     dtestImplementation("org.springframework.boot:spring-boot-starter-webflux")
+    dtestImplementation("org.springframework.cloud:spring-cloud-contract-wiremock")
 }
