--- a/thule-gateway-service/build.gradle
+++ b/thule-gateway-service/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-config")
     implementation('org.springframework.cloud:spring-cloud-starter-gateway')
     implementation("org.springframework.cloud:spring-cloud-starter-kubernetes")
+    implementation("org.springframework.cloud:spring-cloud-starter-kubernetes-config")
     implementation("org.springframework.cloud:spring-cloud-starter-sleuth")
     implementation("org.springframework.cloud:spring-cloud-starter-zipkin")
     implementation("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
