--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -70,7 +70,7 @@ thule:
     mysql:
       host: localhost
       port: 3306
-      schema: mysql
+      schema: thule
   shared:
     logging:
       logstash:
