--- a/thule-people-service/src/dtest/docker/docker-compose.yml
+++ b/thule-people-service/src/dtest/docker/docker-compose.yml
@@ -8,29 +8,16 @@ services:
       SPRING_CLOUD_CONFIG_ENABLED: "false"
       SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false"
       SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
       SPRING_FLYWAY_ENABLED: "false"
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       THULE_SHARED_OAUTH2_RESOURCESERVER_JWS_ENABLED: "false"
       TZ: Europe/London
-    networks:
-      - thule-people-service
-    ports:
-      - 9094:8080
 
   ################################  Servers and Databases Required By Docker tests  ################################
   mysql:
     image: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ALLOW_EMPTY_PASSWORD: "true"
       TZ: Europe/London
-    networks:
-      - thule-people-service
-    ports:
-      - 3306:3306
-
-################################  Networks  ################################
-networks:
-  thule-people-service:
