--- a/thule-people-service/src/dtest/docker/docker-compose.yml
+++ b/thule-people-service/src/dtest/docker/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       SPRING_FLYWAY_ENABLED: "false"
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
+      THULE_PEOPLESERVICE_MYSQL_SCHEMA: mysql
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       THULE_SHARED_OAUTH2_RESOURCESERVER_JWS_ENABLED: "false"
       TZ: Europe/London
