Disabled k8s during itest and ctest

--- a/thule-people-service/src/main/resources/bootstrap-ctest.yml
+++ b/thule-people-service/src/main/resources/bootstrap-ctest.yml
@@ -3,3 +3,8 @@ spring:
   cloud:
     config:
       enabled: false
+    kubernetes:
+      reload:
+        enabled: false
+      secrets:
+        enabled: false
