--- a/thule-configuration-service/build.gradle
+++ b/thule-configuration-service/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR3")
     implementation("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
-    implementation("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+    // Required for JMX support when using the Admin server
+    implementation("org.jolokia:jolokia-core")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.cloud:spring-cloud-config-server")
     implementation("org.springframework.cloud:spring-cloud-starter-kubernetes")
