--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -41,7 +41,8 @@ dependencies {
     implementation("uk.co.serin.thule:thule-spring-boot-starter-resource-server:${thuleSharedVersion}")
     implementation("io.springfox:springfox-swagger2:2.9.2")
     implementation("io.springfox:springfox-swagger-ui:2.9.2")
-    implementation("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+    // Required for JMX support when using the Admin server
+    implementation("org.jolokia:jolokia-core")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-mail")
     implementation("org.springframework.boot:spring-boot-starter-web")
@@ -49,7 +50,8 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-kubernetes")
     implementation("org.springframework.cloud:spring-cloud-starter-sleuth")
     implementation("org.springframework.cloud:spring-cloud-starter-zipkin")
-    implementation("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
+    // Required to retry connecting to the configuration service when it is not available at startup
+    implementation("org.springframework.retry:spring-retry")
 
     testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     testImplementation("com.bitmechanic:dumbster:1.9.0.2")
