--- a/thule-gateway-service/build.gradle
+++ b/thule-gateway-service/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 
     implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR3")
-    implementation("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+    // Required for JMX support when using the Admin server
+    implementation("org.jolokia:jolokia-core")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
     implementation("org.springframework.boot:spring-boot-starter-security")
@@ -49,7 +50,8 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-kubernetes-config")
     implementation("org.springframework.cloud:spring-cloud-starter-sleuth")
     implementation("org.springframework.cloud:spring-cloud-starter-zipkin")
-    implementation("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
+    // Required to retry connecting to the configuration service when it is not available at startup
+    implementation("org.springframework.retry:spring-retry")
 
     testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     testImplementation("org.springframework.cloud:spring-cloud-contract-wiremock")
