--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     implementation("com.googlecode.log4jdbc:log4jdbc:1.2")
     implementation("mysql:mysql-connector-java")
     implementation("org.flywaydb:flyway-core")
-    implementation("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+    // Required for JMX support when using the Admin server
+    implementation("org.jolokia:jolokia-core")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-data-rest")
@@ -58,7 +59,8 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-sleuth")
     implementation("org.springframework.cloud:spring-cloud-starter-zipkin")
     implementation("org.springframework.data:spring-data-rest-hal-browser")
-    implementation("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
+    // Required to retry connecting to the configuration service when it is not available at startup
+    implementation("org.springframework.retry:spring-retry")
 
     testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
