--- a/thule-admin-service/build.gradle
+++ b/thule-admin-service/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
     dtestImplementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    dtestImplementation platform("org.testcontainers:testcontainers-bom:1.13.0")
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
     dtestImplementation("org.springframework.boot:spring-boot-starter-webflux")
+    dtestImplementation("org.testcontainers:junit-jupiter")
 }
