--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -62,7 +62,9 @@ dependencies {
     ctestImplementation("org.springframework.boot:spring-boot-starter-webflux")
 
     dtestImplementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    dtestImplementation platform("org.testcontainers:testcontainers-bom:1.13.0")
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
     dtestImplementation("org.springframework.boot:spring-boot-starter-webflux")
+    dtestImplementation("org.testcontainers:junit-jupiter")
 }
