Migrated to using testcontainers

--- a/thule-gateway-service/src/main/resources/config/application-ide.yml
+++ b/thule-gateway-service/src/main/resources/config/application-ide.yml
@@ -4,6 +4,10 @@ server:
 
 # Spring boot configuration
 spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
   zipkin:
     enabled: false
 
