--- a/thule-gateway-service/src/main/resources/config/application-itest.yml
+++ b/thule-gateway-service/src/main/resources/config/application-itest.yml
@@ -1,5 +1,9 @@
 # Spring boot configuration
 spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
   security:
     oauth2:
       client:
