--- a/thule-authentication-service/src/main/resources/config/application-itest.yml
+++ b/thule-authentication-service/src/main/resources/config/application-itest.yml
@@ -17,12 +17,12 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/auth/realms/thule-test
+          issuer-uri: ${thule.keycloak.base-url}/auth/realms/${thule.keycloak.realm}
 
 # Thule configuration
 thule:
   keycloak:
-    base-url: http://localhost:8080
+    base-url: http://localhost # Will be replaced dynamically at runtime with keycloak containers ip address and port
     realm: thule-test
 
 ######################################### NESTED INTEGRATION TEST PROFILES #######################################
@@ -41,7 +41,7 @@ spring:
       client:
         provider:
           keycloak:
-            token-uri: http://localhost:8080/auth/realms/thule-test/protocol/openid-connect/token
+            token-uri: ${thule.keycloak.base-url}/auth/realms/${thule.keycloak.realm}/protocol/openid-connect/token
         registration:
           keycloak:
             authorization-grant-type: client_credentials
