--- a/thule-configuration-service/build.gradle
+++ b/thule-configuration-service/build.gradle
@@ -23,7 +23,7 @@ apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 // Standard Serin gradle plugin config
 apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
 
-// Non-standard Serin gradle plugin config
+// Non-standard Serin gradle plugin config, if any
 configurations {
     config
 }
@@ -51,6 +51,7 @@ task collectConfigs {
     }
 }
 
+// Project settings
 description = "Thule Configuration Service"
 
 // Dependencies
