--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -23,8 +23,9 @@ apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 // Standard Serin gradle plugin config
 apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
 
-// Non-standard Serin gradle plugin config
+// Non-standard Serin gradle plugin config, if any
 
+// Project settings
 description = "Thule Discovery Service"
 
 dependencies {
