--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -25,7 +25,7 @@ subprojects {
     // Standard Serin gradle plugin config
     apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
 
-    // Non-standard Serin gradle plugin config
+    // Non-standard Serin gradle plugin config, if any
 
     // Dependencies
     dependencies {
