--- a/thule-admin-service/settings.gradle
+++ b/thule-admin-service/settings.gradle
@@ -1,5 +1,8 @@
 pluginManagement {
     repositories {
-        maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
+        maven {
+            url "http://${nexusHost}:${nexusPort}/repository/maven-public"
+            allowInsecureProtocol true
+        }
     }
 }
