--- a/thule-shared/settings.gradle
+++ b/thule-shared/settings.gradle
@@ -1,6 +1,9 @@
 pluginManagement {
     repositories {
-        maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
+        maven {
+            url "http://${nexusHost}:${nexusPort}/repository/maven-public"
+            allowInsecureProtocol true
+        }
     }
 }
 
