--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -10,6 +10,8 @@ plugins {
     id "com.github.ben-manes.versions" version "0.28.0"
     id "org.sonarqube" version "2.8" apply(false)
 }
+// Standard Serin gradle plugin config
+apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/plugin-versions-config.gradle")
 
 subprojects {
     apply plugin: "jacoco"
