--- a/thule-gateway-service/gradle.properties
+++ b/thule-gateway-service/gradle.properties
@@ -3,5 +3,5 @@ group=uk.co.serin.thule
 version=1.0.0-SNAPSHOT
 nexusHost=pooh
 nexusPort=8081
-springBootVersion=2.2.6.RELEASE
+springBootVersion=2.3.0.RC1
 thuleSharedVersion=1.2.0-SNAPSHOT
