--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -109,6 +109,7 @@ project("thule-test") {
 
         compileOnly("org.projectlombok:lombok")
 
+        implementation("com.fasterxml.jackson.core:jackson-databind")
         implementation("org.springframework.boot:spring-boot-actuator")
         implementation("org.springframework.retry:spring-retry")
         implementation("org.springframework:spring-web")
