--- a/thule-email-service/k8s/cit.yml
+++ b/thule-email-service/k8s/cit.yml
@@ -66,7 +66,7 @@ spec:
               value:
           livenessProbe:
             httpGet:
-              path: /actuator/health/liveness
+              path: /actuator/health
               port: service-port
             initialDelaySeconds: 300
             periodSeconds: 30
@@ -76,7 +76,7 @@ spec:
               name: service-port
           readinessProbe:
             httpGet:
-              path: /actuator/health/readiness
+              path: /actuator/health
               port: service-port
             periodSeconds: 30
             timeoutSeconds: 10
