--- a/thule-people-service/k8s/cit.yml
+++ b/thule-people-service/k8s/cit.yml
@@ -81,7 +81,7 @@ spec:
               value:
           livenessProbe:
             httpGet:
-              path: /actuator/health
+              path: /actuator/health/liveness
               port: service-port
             initialDelaySeconds: 300
             periodSeconds: 30
@@ -91,7 +91,7 @@ spec:
               name: service-port
           readinessProbe:
             httpGet:
-              path: /actuator/health
+              path: /actuator/health/readiness
               port: service-port
             periodSeconds: 30
             timeoutSeconds: 10
