Upgraded Spring Boot: [2.3.0.RC1 -> 2.3.0.RELEASE]

--- a/thule-admin-service/gradle.properties
+++ b/thule-admin-service/gradle.properties
@@ -3,5 +3,5 @@ group=uk.co.serin.thule
 version=1.0.0-SNAPSHOT
 nexusHost=pooh
 nexusPort=8081
-springBootVersion=2.3.0.RC1
+springBootVersion=2.3.0.RELEASE
 thuleSharedVersion=1.2.0-SNAPSHOT
