--- a/thule-shared/gradle.properties
+++ b/thule-shared/gradle.properties
@@ -3,5 +3,5 @@ group=uk.co.serin.thule
 version=1.2.0-SNAPSHOT
 nexusHost=pooh
 nexusPort=8081
-springBootVersion=2.3.0.RC1
+springBootVersion=2.3.0.RELEASE
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
