Migrated from GenericContainer to MongoDBContainer for integration tests

--- a/thule-repository-mongodb/build.gradle
+++ b/thule-repository-mongodb/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     testImplementation("com.google.code.gson:gson")
 
     itestImplementation("org.testcontainers:junit-jupiter")
+    itestImplementation("org.testcontainers:mongodb")
 }
