Minor change to allow for spring boot admin server fix for relative urls

--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -174,7 +174,7 @@ metadata:
   annotations:
     # Spring Boot Admin metadata
     health.path: /
-    management.context-path: auth/realms/master/.well-known/openid-configuration
+    management.context-path: /auth/realms/master/.well-known/openid-configuration
     service-path: auth
 spec:
   type: NodePort
