Minor change to allow for spring boot admin server fix for relative urls

--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -175,7 +175,7 @@ metadata:
     # Spring Boot Admin metadata
     health.path: /
     management.context-path: /auth/realms/master/.well-known/openid-configuration
-    service-path: auth
+    service-path: /auth
 spec:
   type: NodePort
   ports:
