Fixed ng path issue

--- a/thule-ui/build.gradle
+++ b/thule-ui/build.gradle
@@ -42,9 +42,9 @@ task buildAngular(type:Exec) {
     group = BasePlugin.BUILD_GROUP
     // ng doesn't exist as a file in windows -> ng.cmd
     if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
-        commandLine "ng.cmd", "build"
+        commandLine "npx", "ng.cmd", "build"
     } else {
-        commandLine "ng", "build"
+        commandLine "npx", "ng", "build"
     }
 }
 
