--- a/thule-ui/src/main/webapp/angular.json
+++ b/thule-ui/src/main/webapp/angular.json
@@ -18,6 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
+            "baseHref": "/thule-ui/",
             "outputPath": "dist/static",
             "index": "src/index.html",
             "main": "src/main.ts",
