--- a/thule-ui/src/main/webapp/angular.json
+++ b/thule-ui/src/main/webapp/angular.json
@@ -24,6 +24,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
+            "proxyConfig": "src/proxy.conf.json",
             "assets": [
               "src/favicon.ico",
               "src/assets"
