Renamed thule-ui to thule-ui-service

--- a/thule-ui-service/src/main/resources/config/application.yml
+++ b/thule-ui-service/src/main/resources/config/application.yml
@@ -1,6 +1,6 @@
 # Spring actuator configuration
 info:
-  description: Thule UI
+  description: Thule UI Service
   name: ${spring.application.name}
 
 # Management endpoint configuration
