--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -12,10 +12,10 @@ plugins {
     id "java"
     id "maven-publish"
     id "org.asciidoctor.convert" version "2.4.0"
-//    id "org.sonarqube" version "3.0"
+    id "org.sonarqube" version "3.0"
     id "org.springframework.boot" version "${springBootVersion}"
 }
-//apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
+apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Standard Serin gradle plugin config
 apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
