--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 // Plugins
 plugins {
     id "com.github.ben-manes.versions" version "0.28.0"
-//    id "jacoco"
+    id "jacoco"
     id "java"
     id "maven-publish"
     id "org.asciidoctor.convert" version "2.4.0"
