--- a/thule-configuration-service/build.gradle
+++ b/thule-configuration-service/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     config("uk.co.serin.thule:thule-email-service:latest.integration")
     config("uk.co.serin.thule:thule-gateway-service:latest.integration")
     config("uk.co.serin.thule:thule-people-service:latest.integration")
-    config("uk.co.serin.thule:thule-ui:latest.integration")
+    config("uk.co.serin.thule:thule-ui-service:latest.integration")
 }
 task collectConfigs {
     doLast {
