--- a/thule-gateway-service/k8s/cit.yml
+++ b/thule-gateway-service/k8s/cit.yml
@@ -120,9 +120,29 @@ spec:
             backend:
               serviceName: thule-gateway-service
               servicePort: 80
+---
+kind: Ingress
+apiVersion: networking.k8s.io/v1beta1
+metadata:
+  annotations:
+    kubernetes.io/ingress.allow-http: "false"
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-gateway-service-secure"
+  name: thule-gateway-service-ingress
+  namespace: thule
+spec:
+  rules:
+    - host: piglet-secure
+      http:
+        paths:
+          - path: /thule-gateway-service-secure(/|$)(.*)
+            backend:
+              serviceName: thule-gateway-service
+              servicePort: 80
   tls:
     - hosts:
-        - piglet
+        - piglet-secure
       secretName: thule-application-secrets
 ---
 kind: Service
