--- a/thule-people-service/src/main/resources/config/application-cit.yml
+++ b/thule-people-service/src/main/resources/config/application-cit.yml
@@ -1,5 +1,11 @@
 # Spring boot configuration
 spring:
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.oauth2.client.servlet.OAuth2ClientAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.oauth2.resource.servlet.OAuth2ResourceServerAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
   security:
     oauth2:
       client:
