--- a/thule-people-service/src/main/resources/config/application-ide.yml
+++ b/thule-people-service/src/main/resources/config/application-ide.yml
@@ -4,6 +4,12 @@ server:
 
 # Spring boot configuration
 spring:
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.oauth2.client.servlet.OAuth2ClientAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.oauth2.resource.servlet.OAuth2ResourceServerAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
   cloud:
     discovery:
       client:
@@ -16,6 +22,7 @@ spring:
     username: thule
   flyway:
     user: root
+    password: root
   zipkin:
     enabled: false
 
