Temporarily exclude security

--- a/thule-people-service/src/main/resources/config/application-cit.yml
+++ b/thule-people-service/src/main/resources/config/application-cit.yml
@@ -6,7 +6,6 @@ spring:
       - org.springframework.boot.autoconfigure.security.oauth2.client.servlet.OAuth2ClientAutoConfiguration
       - org.springframework.boot.autoconfigure.security.oauth2.resource.servlet.OAuth2ResourceServerAutoConfiguration
       - org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-      - uk.co.serin.thule.spring.boot.starter.resourceserver.autoconfiguration.ResourceServerAutoConfiguration
   security:
     oauth2:
       client:
@@ -16,3 +15,10 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://piglet/thule-authentication-service/auth/realms/thule
+
+# Thule configuration
+thule:
+  shared:
+    oauth2:
+      resourceserver:
+        enabled: false
