--- a/thule-people-service/src/main/resources/config/application-ide.yml
+++ b/thule-people-service/src/main/resources/config/application-ide.yml
@@ -10,7 +10,6 @@ spring:
       - org.springframework.boot.autoconfigure.security.oauth2.client.servlet.OAuth2ClientAutoConfiguration
       - org.springframework.boot.autoconfigure.security.oauth2.resource.servlet.OAuth2ResourceServerAutoConfiguration
       - org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-      - uk.co.serin.thule.spring.boot.starter.resourceserver.autoconfiguration.ResourceServerAutoConfiguration
   cloud:
     discovery:
       client:
@@ -32,4 +31,7 @@ thule:
   shared:
     logging:
       logstash:
+        enabled: false
+    oauth2:
+      resourceserver:
         enabled: false
