--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 // Plugins
 plugins {
     id "com.github.ben-manes.versions" version "0.28.0"
-    id "jacoco"
+//    id "jacoco"
     id "java"
     id "maven-publish"
     id "org.sonarqube" version "3.0"
