Removed redundant import

--- a/thule-discovery-service/k8s/cit.yml
+++ b/thule-discovery-service/k8s/cit.yml
@@ -115,6 +115,10 @@ spec:
             backend:
               serviceName: thule-discovery-service
               servicePort: 80
+  tls:
+    - hosts:
+        - piglet
+      secretName: thule-application-secrets
 ---
 kind: Service
 apiVersion: v1
