--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -165,6 +165,10 @@ spec:
             backend:
               serviceName: thule-authentication-service
               servicePort: 80
+  tls:
+    - hosts:
+        - piglet
+      secretName: thule-application-secrets
 ---
 kind: Service
 apiVersion: v1
