--- a/thule-configuration-service/k8s/cit.yml
+++ b/thule-configuration-service/k8s/cit.yml
@@ -122,6 +122,10 @@ spec:
             backend:
               serviceName: thule-configuration-service
               servicePort: 80
+  tls:
+    - hosts:
+        - piglet
+      secretName: thule-application-secrets
 ---
 kind: Service
 apiVersion: v1
