--- a/thule-email-service/k8s/cit.yml
+++ b/thule-email-service/k8s/cit.yml
@@ -125,6 +125,10 @@ spec:
             backend:
               serviceName: thule-email-service
               servicePort: 80
+  tls:
+    - hosts:
+        - piglet
+      secretName: thule-application-secrets
 ---
 kind: Service
 apiVersion: v1
