--- a/thule-ping-service/k8s/cit.yml
+++ b/thule-ping-service/k8s/cit.yml
@@ -48,6 +48,10 @@ spec:
             backend:
               serviceName: thule-ping-service
               servicePort: 80
+  tls:
+    - hosts:
+        - piglet
+      secretName: thule-application-secrets
 ---
 kind: Service
 apiVersion: v1
