--- a/thule-ui-service/k8s/cit.yml
+++ b/thule-ui-service/k8s/cit.yml
@@ -108,6 +108,10 @@ spec:
             backend:
               serviceName: thule-ui-service
               servicePort: 80
+  tls:
+    - hosts:
+        - piglet
+      secretName: thule-application-secrets
 ---
 kind: Service
 apiVersion: v1
